saw-web/src/app/modules/analyze/view/new-dialog/analyze-new-dialog.component.scss
@import "src/themes/base/colors";

:host {
  z-index: 80;
  display: flex;
  flex-direction: column;
  width: 700px;
  height: 620px;
}

h2.mat-dialog-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.mat-dialog-content {
  padding: 0 20px;
  flex-grow: 1;
}

mat-form-field {
  width: 50%;
  margin-left: 5px;

  ::ng-deep .mat-form-field-infix {
    padding: 1em 0 0.5em 0;
    border: none;
  }

  ::ng-deep .mat-form-field-suffix, ::ng-deep .mat-form-field-prefix {
    top: 0em;
  }

  ::ng-deep .mat-form-field-suffix {
    font-size: 10px;
    cursor: pointer;
  }
}

mat-horizontal-stepper {
  ::ng-deep .mat-horizontal-stepper-header-container {
    width: 60%;
    margin: 0 auto;
  }
}

mat-tab-group {
  ::ng-deep .mat-tab-body-wrapper {
    padding-top: 5px;
  }

  ::ng-deep .mat-tab-label {
    min-width: 100px;
    height: 30px;
  }

  ::ng-deep mat-ink-bar {
    width: 100px;
  }
}

mat-radio-group {
  justify-content: center;
}

.metric-radio-button {
  border: 1px solid $primary-grey-g1;
  border-radius: 5px;
  margin: 0 5px 5px;

  ::ng-deep label.mat-radio-label {
    height: 60px;
    width: 100%;
  }

  ::ng-deep .mat-radio-container {
    display: none;
  }

  ::ng-deep .mat-radio-label-content {
    padding: 0;
    font-weight: bold;
    width: 100%;
    display: flex;
    color: $primary-grey-g4;
    align-items: center;
    justify-content: space-around;
    flex-direction: row-reverse;

    .category-icon {
      display: flex;
      padding-right: 10px;
      width: 20px;
      height: 20px;
      background-image: url("/assets/img/category-icons/category-default-b-3.svg");
      background-repeat: no-repeat;
      background-size: contain;
    }

    .category-detail {
      display: flex;
      flex-direction: column;
      align-items: center;
      flex-grow: 1;
    }
  }

  .metric-created-time {
    font-weight: normal;
    font-size: 12px;
    color: $primary-grey-g2;
  }

  ::ng-deep &.mat-radio-checked {
    background: $primary-blue-b2;

    ::ng-deep .mat-radio-label-content {
      color: white !important;

      .category-icon {
        background-image: url("/assets/img/category-icons/category-default.svg");
      }
    }

    .metric-created-time {
      color: white !important;
    }
  }
}

.section {
  & > label {
    color: $primary-blue-b2;
    display: block;
    padding: 10px 0;
    font-size: 16px;
    font-weight: 400;
    letter-spacing: 0.01em;
    line-height: 24px;
  }

  .container {
    color: $primary-grey-g4;
    padding: 0 10px;

    .mat-radio-label {
      max-width: 100%;
      white-space: normal;
      vertical-align: middle;
      font-size: 14px;
      font-weight: 600;
      color: #596574;
    }

    .mat-radio-label-content {
      word-wrap: break-word;
      display: inline-block;
      width: 186px;
      padding-bottom: 8px;
    }
  }
}

.dialog-actions {
  padding: 5px 0;
}

